--- a/covid19_dist.ipynb
+++ b/covid19_dist.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "covid19_dist.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMD4hG9A+TYWkheW6QR2gC/",
+      "authorship_tag": "ABX9TyOjTkYr/mb+U14mHAjX0D+i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1221,6 +1221,37 @@
           "output_type": "stream",
           "text": [
             "5933.6704492244935 66557.54894074751 557.7302215229151 217.81873197684354 3895.3895825706572\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uA_4lWy3fXz1",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "22ba6371-f316-4317-ef40-cbf8529a7a44"
+      },
+      "source": [
+        "print(\n",
+        "minkowski(us_CA['death'],skorea_d10['deceased'][:len(us_CA['death'])], p=1),\n",
+        "minkowski(us_NY['death'],skorea_d10['deceased'][:len(us_NY['death'])], p=1),\n",
+        "minkowski(us_DC['death'],skorea_d10['deceased'][:len(us_DC['death'])], p=1),\n",
+        "minkowski(us_NE['death'],skorea_d10['deceased'][:len(us_NE['death'])], p=1),\n",
+        "minkowski(us_FL['death'],skorea_d10['deceased'][:len(us_FL['death'])], p=1)\n",
+        ")"
+      ],
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "28615.0 334003.0 2535.0 949.0 19166.0\n"
           ],
           "name": "stdout"
         }
