--- a/covid19_dist.ipynb
+++ b/covid19_dist.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "covid19_dist.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOjTkYr/mb+U14mHAjX0D+i",
+      "authorship_tag": "ABX9TyNOMS7Me7zSudIvvz/8qS2S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,18 +53,18 @@
       "metadata": {
         "id": "5zaMUa4B_Kq_",
         "colab_type": "code",
+        "outputId": "142789a5-7e28-40f9-fd9e-67c3dcfdfbeb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 122
-        },
-        "outputId": "142789a5-7e28-40f9-fd9e-67c3dcfdfbeb"
+        }
       },
       "source": [
         "from google.colab import drive\n",
         "\n",
         "drive.mount(\"/content/gdrive\")"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -84,16 +84,16 @@
       "metadata": {
         "id": "4UMbJkv1_dOR",
         "colab_type": "code",
+        "outputId": "2c4edaef-3a27-4781-97a7-3c6d57cbf495",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "2c4edaef-3a27-4781-97a7-3c6d57cbf495"
+        }
       },
       "source": [
         "cd gdrive/Shared\\ drives/"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,16 +109,16 @@
       "metadata": {
         "id": "WcSN20Pl_pL-",
         "colab_type": "code",
+        "outputId": "3e68ab6c-7e83-442f-8d4b-357b632b0f2a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "3e68ab6c-7e83-442f-8d4b-357b632b0f2a"
+        }
       },
       "source": [
         "cd Covid19_project/"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,16 +134,16 @@
       "metadata": {
         "id": "-rXZi63T_r85",
         "colab_type": "code",
+        "outputId": "eaa789e3-c983-4219-aace-069464a000f1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "eaa789e3-c983-4219-aace-069464a000f1"
+        }
       },
       "source": [
         "cd data_sets/"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,16 +159,16 @@
       "metadata": {
         "id": "DvKo19FuACuP",
         "colab_type": "code",
+        "outputId": "96f7af95-bb71-484e-a99b-00cb96c9e113",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "96f7af95-bb71-484e-a99b-00cb96c9e113"
+        }
       },
       "source": [
         "ls"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,16 +198,16 @@
       "metadata": {
         "id": "tYuiqVx0_8Z9",
         "colab_type": "code",
+        "outputId": "96487d49-5060-43a0-9d5a-6f5dde3e84a8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
-        },
-        "outputId": "96487d49-5060-43a0-9d5a-6f5dde3e84a8"
+        }
       },
       "source": [
         "us_state.head()"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -426,16 +426,16 @@
       "metadata": {
         "id": "iP28Vzi5FaVd",
         "colab_type": "code",
+        "outputId": "e8829677-a839-462d-a8c1-7cc4878b8b4c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        },
-        "outputId": "e8829677-a839-462d-a8c1-7cc4878b8b4c"
+        }
       },
       "source": [
         "us_state['state'].unique()"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -461,16 +461,16 @@
       "metadata": {
         "id": "uKQryUX9BSlo",
         "colab_type": "code",
+        "outputId": "6afd4bb9-f56b-4c8b-c9d2-5f13cbd933f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "6afd4bb9-f56b-4c8b-c9d2-5f13cbd933f7"
+        }
       },
       "source": [
         "skorea.head()"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -579,17 +579,17 @@
       "metadata": {
         "id": "UEBEphcxBUhy",
         "colab_type": "code",
+        "outputId": "cfe4c25e-98af-4218-a55a-5b37dbdc2fb1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
-        },
-        "outputId": "cfe4c25e-98af-4218-a55a-5b37dbdc2fb1"
+        }
       },
       "source": [
         "skorea_d10 = skorea.loc[skorea['deceased'] >= 10]\n",
         "skorea_d10"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -767,18 +767,18 @@
       "metadata": {
         "id": "nIfgjx8wBiQX",
         "colab_type": "code",
+        "outputId": "d14a7550-eb70-4088-b2ea-c0d52720c0cd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
-        },
-        "outputId": "d14a7550-eb70-4088-b2ea-c0d52720c0cd"
+        }
       },
       "source": [
         "d10 = np.arange(0,len(skorea_d10),1)\n",
         "skorea_d10['d10'] = d10\n",
         "skorea_d10"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -968,18 +968,18 @@
       "metadata": {
         "id": "zZxTL6xjC5X5",
         "colab_type": "code",
+        "outputId": "a2b16e82-0e8e-46d6-e902-1d92e7d99b9f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 296
-        },
-        "outputId": "a2b16e82-0e8e-46d6-e902-1d92e7d99b9f"
+        }
       },
       "source": [
         "plt.plot(skorea_d10['d10'], skorea_d10['deceased'])\n",
         "plt.xlabel('Days since <10 deaths')\n",
         "plt.ylabel('Deaths')"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1039,11 +1039,11 @@
       "metadata": {
         "id": "CNM2OLLsOFsC",
         "colab_type": "code",
+        "outputId": "c871ab92-c42e-48b9-d0ff-0501f0806670",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 279
-        },
-        "outputId": "c871ab92-c42e-48b9-d0ff-0501f0806670"
+        }
       },
       "source": [
         "plt.plot(us_CA['d10'], us_CA['death'][::-1], label='CA')\n",
@@ -1056,7 +1056,7 @@
         "plt.ylabel('Deaths')\n",
         "plt.legend();"
       ],
-      "execution_count": 79,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1078,11 +1078,11 @@
       "metadata": {
         "id": "NFg8aqeTQIyf",
         "colab_type": "code",
+        "outputId": "41b7a25a-7ea0-4a6f-9b76-138480b76f95",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "41b7a25a-7ea0-4a6f-9b76-138480b76f95"
+        }
       },
       "source": [
         "plt.plot(us_CA['d10'], us_CA['death'][::-1], label='CA')\n",
@@ -1125,7 +1125,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 80,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1199,11 +1199,11 @@
       "metadata": {
         "id": "aKet64EbRg8G",
         "colab_type": "code",
+        "outputId": "de1c70fe-cc5c-47ae-9c64-befd32a3d71c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "de1c70fe-cc5c-47ae-9c64-befd32a3d71c"
+        }
       },
       "source": [
         "from scipy.spatial.distance import minkowski\n",
@@ -1215,7 +1215,7 @@
         "minkowski(us_FL['death'],skorea_d10['deceased'][:len(us_FL['death'])], p=2)\n",
         ")"
       ],
-      "execution_count": 90,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1231,11 +1231,11 @@
       "metadata": {
         "id": "uA_4lWy3fXz1",
         "colab_type": "code",
+        "outputId": "22ba6371-f316-4317-ef40-cbf8529a7a44",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "22ba6371-f316-4317-ef40-cbf8529a7a44"
+        }
       },
       "source": [
         "print(\n",
@@ -1246,7 +1246,7 @@
         "minkowski(us_FL['death'],skorea_d10['deceased'][:len(us_FL['death'])], p=1)\n",
         ")"
       ],
-      "execution_count": 94,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1262,11 +1262,11 @@
       "metadata": {
         "id": "iOoa5f4jUj97",
         "colab_type": "code",
+        "outputId": "396b2000-d510-4fd9-de35-67b0e99fa63e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "396b2000-d510-4fd9-de35-67b0e99fa63e"
+        }
       },
       "source": [
         "from scipy.stats import pearsonr\n",
@@ -1278,7 +1278,7 @@
         "pearsonr(us_FL['death'],skorea_d10['deceased'][:len(us_FL['death'])])\n",
         ")"
       ],
-      "execution_count": 93,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1287,6 +1287,22 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "l9R7aaQtVvS0",
+        "colab_type": "text"
+      },
+      "source": [
+        "|     |Minkowski (p=2)|Minkowski (p=1)|Pearson R|\n",
+        "|-----|---------------|---------------|---------|\n",
+        "|  CA |5933.67        |28615.0        |-0.9243100406653758|  \n",
+        "|  NY |66557.5        |334003.0       |-0.9659967007582864|  \n",
+        "|  DC |557.73         |2535.0         |-0.9500379533605671|  \n",
+        "|  NE |217.818        |949.0          |-0.9599958114628266|  \n",
+        "|  FL |3895.389       |19166.0        |-0.9476379494086541|  "
       ]
     },
     {
